[package]
name = "covid-situation-reports"
version = "0.1.0"
authors = ["Jasper Hugo <jasper@dualtone.ltd.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25.1"
itertools = "0.8.2"
lopdf = "0.24.0"
regex = "1.3.4"
reqwest = { version = "0.10.3", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
serde_json = "*"
tokio = { version = "0.2.12", features = ["macros"] }
